design part done

--- a/index.html
+++ b/index.html
@@ -158,169 +158,172 @@
             </div>
 
             <!-- ticket selection section -->
-            <div class=" grid grid-cols-2 mt-4 mx-12 px-8 pb-10 bg-white rounded-2xl">
-                <div>
-                    <br>
-                    <div class="flex justify-between">
-                        <p class="text-xl font-bold">Select Your Seat </p>
-                    </div>
-                    <br>
-                    <hr class="border-dashed border-2 ">
-                    <br>
-                    <div class="flex justify-between">
-                        <p class="flex "><img src="images/seat-gray.png" alt="">Available</p>
-                        <p class="flex text-green-400 font-bold"><img src="images/seat-green-filled.png" alt="">Selected
-                        </p>
-                    </div>
-                    <br>
-                    <hr class="border-dashed border-2 ">
-                    <div class="mt-12">
-                        <!-- seat number -->
-                        <div>
-                            <div class="grid grid-cols-2 ">
+            <div class=" grid grid-cols-2 mt-4 mx-12 px-8 pb-10 bg-white rounded-2xl ">
+                <div class="border-r-4 border-dashed ">
+                    <div class="pr-6">
+                        <br>
+                        <div class="flex justify-between ">
+                            <p class="text-xl font-bold">Select Your Seat </p>
+                        </div>
+                        <br>
+                        <hr class="border-dashed border-2 ">
+                        <br>
+                        <div class="flex justify-between">
+                            <p class="flex "><img src="images/seat-gray.png" alt="">Available</p>
+                            <p class="flex text-green-400 font-bold"><img src="images/seat-green-filled.png"
+                                    alt="">Selected
+                            </p>
+                        </div>
+                        <br>
+                        <hr class="border-dashed border-2 ">
+                        <div class="mt-12">
+                            <!-- seat number -->
+                            <div>
+                                <div class="grid grid-cols-2 ">
 
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">A</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">A1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">A2</kbd>
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">A</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">A1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">A2</kbd>
+
+                                    </div>
+
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">A3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">A4</kbd>
+                                    </div>
+
+                                </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">B</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">B1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">B2</kbd>
+
+                                    </div>
+
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">B3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">B4</kbd>
+                                    </div>
 
                                 </div>
 
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">A3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">A4</kbd>
-                                </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">C</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">C1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">C2</kbd>
 
-                            </div>
-                            <div class="grid grid-cols-2 mt-4 ">
+                                    </div>
 
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">B</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">B1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">B2</kbd>
-
-                                </div>
-
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">B3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">B4</kbd>
-                                </div>
-
-                            </div>
-
-                            <div class="grid grid-cols-2 mt-4 ">
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">C</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">C1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">C2</kbd>
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">C3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">C4</kbd>
+                                    </div>
 
                                 </div>
 
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">C3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">C4</kbd>
-                                </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">D</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">D1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">D2</kbd>
 
-                            </div>
+                                    </div>
 
-                            <div class="grid grid-cols-2 mt-4 ">
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">D</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">D1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">D2</kbd>
-
-                                </div>
-
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">D3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">D4</kbd>
-                                </div>
-
-                            </div>
-
-                            <div class="grid grid-cols-2 mt-4 ">
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">E</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">E1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">E2</kbd>
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">D3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">D4</kbd>
+                                    </div>
 
                                 </div>
 
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">E3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">E4</kbd>
-                                </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">E</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">E1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">E2</kbd>
 
-                            </div>
-                            <div class="grid grid-cols-2 mt-4 ">
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">F</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">F1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">F2</kbd>
+                                    </div>
 
-                                </div>
-
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">F3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">F4</kbd>
-                                </div>
-
-                            </div>
-                            <div class="grid grid-cols-2 mt-4 ">
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">G</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">G1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">G2</kbd>
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">E3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">E4</kbd>
+                                    </div>
 
                                 </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">F</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">F1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">F2</kbd>
 
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">G3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">G4</kbd>
-                                </div>
+                                    </div>
 
-                            </div>
-                            <div class="grid grid-cols-2 mt-4 ">
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">H</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">H1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">H2</kbd>
-
-                                </div>
-
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">H3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">H4</kbd>
-                                </div>
-
-                            </div>
-                            <div class="grid grid-cols-2 mt-4 ">
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">I</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">I1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">I2</kbd>
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">F3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">F4</kbd>
+                                    </div>
 
                                 </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">G</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">G1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">G2</kbd>
 
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">I3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">I4</kbd>
+                                    </div>
+
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">G3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">G4</kbd>
+                                    </div>
+
                                 </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">H</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">H1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">H2</kbd>
 
-                            </div>
-                            <div class="grid grid-cols-2 mt-4 ">
-                                <div class="flex justify-evenly ">
-                                    <h4 class="text-gray-400">J</h4>
-                                    <kbd class="kbd h-[20px] w-[70px]">J1</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">J2</kbd>
+                                    </div>
+
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">H3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">H4</kbd>
+                                    </div>
 
                                 </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">I</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">I1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">I2</kbd>
 
-                                <div class="flex justify-evenly">
-                                    <kbd class="kbd h-[20px] w-[70px]">J3</kbd>
-                                    <kbd class="kbd h-[20px] w-[70px]">J4</kbd>
+                                    </div>
+
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">I3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">I4</kbd>
+                                    </div>
+
                                 </div>
+                                <div class="grid grid-cols-2 mt-4 ">
+                                    <div class="flex justify-evenly ">
+                                        <h4 class="text-gray-400">J</h4>
+                                        <kbd class="kbd h-[20px] w-[70px]">J1</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">J2</kbd>
 
+                                    </div>
+
+                                    <div class="flex justify-evenly">
+                                        <kbd class="kbd h-[20px] w-[70px]">J3</kbd>
+                                        <kbd class="kbd h-[20px] w-[70px]">J4</kbd>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
