--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                 class="input input-bordered w-full max-w-s" />
                         </div>
                         <br>
-                        <button  class="btn bg-green-600 text-white font-bold w-full max-w-s">Confirm</button>
+                        <button id="goToConfirmBtn" class="btn bg-green-600 text-white font-bold w-full max-w-s">Confirm</button>
                         <div class="flex justify-between">
                             <a href="">Terms and Conditions</a>
                             <a href="">Cancellation Policy</a>
