--- a/confirmPage.html
+++ b/confirmPage.html
@@ -20,9 +20,9 @@
             </figure>
             <div class="card-body items-center text-center">
                 <h2 class="card-title font-bold text-green-500">SUCCESSFULLY DONE</h2>
-                <p>Thank you for Booking Our Bus Seats. <br> We are working hard to find the best service and deals for
+                <p class="font-bold">Thank you for Booking Our Bus Seats. <br> We are working hard to find the best service and deals for
                     you. <br>
-                    Shortly you will find a confirmation in your email.</p>
+                    <span class="font-normal">Shortly you will find a confirmation in your email.</span></p>
                 <div class="card-actions">
                     <button id="goToHomeBtn"
                         class="btn btn-success text-white w-[300px] h-[55px] font-bold rounded-3xl">Continue</button>
